--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beyond-foundry-game-log/server",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Proxy server that communicates with DnD Beyond",
   "repository": {
     "type": "git",
@@ -34,14 +34,12 @@
     "dev": "tsx src/start.ts"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2",
-    "ws": "^8.18.0"
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.11",
-    "@types/ws": "^8.5.11",
     "eslint": "^8.57.0",
     "prettier": "^3.3.3",
     "tsx": "^4.16.2",
